# CATS

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
CATS/: main.py
gui/: cats.py  converter.py  gui.py
